2014-09-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search, do_info_index_search): 
	Getting user input moved from do_info_index_search.

	* info/indices.c (next_index_match, info_next_index_match): 
	Function split out.
	(look_in_indices): Return value as intended.

	* info/indices.c, info/session.c (allfiles_node) 
	(info_all_files): Moved between files.
	* info/session.c (move_to_goal_column): Return type declared as 
	void.
	(info_dispatch_on_key): Return values as intended.

	* info/indices.c (report_index_match): Split out from 
	info_next_index_match.

	* info/indices.c (next_index_match): Don't take index argument; 
	always operate on index_index.  Take FILE_BUFFER argument.  
	Update index_offset.  Call to info_indices_of_file_buffer to 
	update index_index moved from do_info_index_search.  All callers 
	updated.
	* info/info.c (main) <--index-search>: Call next_index_match and 
	report_index_match.

	* info/indices.c (do_info_index_search): Merged into 
	info_index_search.
	(info_entry_exists): Function removed.
	(report_index_match): Don't internationalize a string that 
	should never be displayed.

	* info/indices.c (info_indices_of_file_buffer): Check if we have 
	already built an index moved from next_index_match.
	(info_index_search) <empty search string>: Call 
	info_indices_of_file_buffer.  Always exit function. 

2014-09-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_apropos): Strip any suffix like 
	".info" from uses of filename in generated node contents.  Mark 
	node contents as an index.  Comment added mentioning problem 
	with character encodings.  Introductory text changed to be more 
	descriptive.

	* info/indices.c (look_in_indices): New function, split from:
	* info/info.c (add_initial_nodes) <index search>
	* info/indices.c (info_indices_of_file_buffer): Declared static.
	Return type is void.  Clear 'index_index' variable if no file 
	buffer.
	(index_nodenames): Comment changed.
